# medstack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-CONTENT.md  Plans.md  README.md  deny.toml  test_duplicate_vulnerability.rs
.github/workflows/: ci.yml
crates/identity-verification/: Cargo.toml
crates/identity-verification/src/: generic_adapter.rs  lib.rs
crates/identity-verification/tests/: compile_fail.rs
crates/identity-verification/tests/ui/: cannot_call_issue.rs  cannot_call_issue.stderr
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs
crates/persistence-common/: Cargo.toml
crates/persistence-common/src/: lib.rs
crates/persistence-postgres/: Cargo.toml
crates/persistence-postgres/src/: lib.rs
crates/persistence-postgres/tests/: conformance.rs
crates/persistence-sqlite/: Cargo.toml
crates/persistence-sqlite/src/: lib.rs
crates/qa-core/: Cargo.toml
crates/qa-core/src/: lib.rs
crates/qa-core/src/domain/: answer.rs  credential.rs  id.rs  license.rs  mod.rs  ports.rs  question.rs  tag.rs  vote.rs
crates/qa-core/tests/: architecture.rs  compile_fail.rs  domain_ids.rs
crates/qa-core/tests/ui/: cannot_forge_credential.rs  cannot_forge_credential.stderr
crates/search/: Cargo.toml
crates/search/src/: lib.rs
docs/: ATTRIBUTION-RENDERING.md  BADGE-SEMANTICS.md  DEVELOPER-SETUP.md  ON-TOPIC-SCOPE.md  PERSISTENCE-TESTING.md
ingestion/: pyproject.toml
web/: package.json
