[package]
name = "persistence-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
qa-core = { path = "../qa-core" }
persistence-common = { path = "../persistence-common" }
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
